internal/gatewayapi/testdata/envoyproxy-otel-backend-tls-dedup.out.yaml
backends:
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: Backend
  metadata:
    name: otel-collector
    namespace: envoy-gateway
  spec:
    endpoints:
    - fqdn:
        hostname: otel-collector.example.com
        port: 443
    tls:
      wellKnownCACertificates: System
  status:
    conditions:
    - lastTransitionTime: null
      message: The Backend was accepted
      reason: Accepted
      status: "True"
      type: Accepted
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    name: gateway-1
    namespace: envoy-gateway
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - allowedRoutes:
        namespaces:
          from: Same
      name: http
      port: 80
      protocol: HTTP
  status:
    listeners:
    - attachedRoutes: 0
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: http
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
infraIR:
  envoy-gateway/gateway-1:
    proxy:
      config:
        apiVersion: gateway.envoyproxy.io/v1alpha1
        kind: EnvoyProxy
        metadata:
          name: telemetry-tls
          namespace: envoy-gateway-system
        spec:
          logging: {}
          telemetry:
            accessLog:
              settings:
              - format:
                  text: |
                    [%START_TIME%] "%REQ(:METHOD)% %PROTOCOL%" %RESPONSE_CODE%
                  type: Text
                sinks:
                - openTelemetry:
                    backendRefs:
                    - group: gateway.envoyproxy.io
                      kind: Backend
                      name: otel-collector
                      namespace: envoy-gateway
                    resourceAttributes:
                      k8s.cluster.name: cluster-1
                  type: OpenTelemetry
            metrics:
              sinks:
              - openTelemetry:
                  backendRefs:
                  - group: gateway.envoyproxy.io
                    kind: Backend
                    name: otel-collector
                    namespace: envoy-gateway
                type: OpenTelemetry
            tracing:
              provider:
                backendRefs:
                - group: gateway.envoyproxy.io
                  kind: Backend
                  name: otel-collector
                  namespace: envoy-gateway
                type: OpenTelemetry
              samplingRate: 100
        status: {}
      listeners:
      - name: envoy-gateway/gateway-1/http
        ports:
        - containerPort: 10080
          name: http-80
          protocol: HTTP
          servicePort: 80
      metadata:
        labels:
          gateway.envoyproxy.io/owning-gateway-name: gateway-1
          gateway.envoyproxy.io/owning-gateway-namespace: envoy-gateway
        ownerReference:
          kind: GatewayClass
          name: envoy-gateway-class
      name: envoy-gateway/gateway-1
      namespace: envoy-gateway-system
      resolvedMetricSinks:
      - authority: otel-collector.example.com
        destination:
          metadata:
            kind: EnvoyProxy
            name: telemetry-tls
            namespace: envoy-gateway-system
          name: metrics_otel_0
          settings:
          - addressType: FQDN
            endpoints:
            - host: otel-collector.example.com
              port: 443
            metadata:
              kind: Backend
              name: otel-collector
              namespace: envoy-gateway
            name: metrics_otel_0/backend/-1
            protocol: GRPC
            tls:
              alpnProtocols: null
              caCertificate:
                name: system_ca_certificates
              sni: otel-collector.example.com
              useSystemTrustStore: true
xdsIR:
  envoy-gateway/gateway-1:
    accessLog:
      openTelemetry:
      - authority: otel-collector.example.com
        destination:
          metadata:
            kind: EnvoyProxy
            name: telemetry-tls
            namespace: envoy-gateway-system
          name: accesslog_otel_0_0
          settings:
          - addressType: FQDN
            endpoints:
            - host: otel-collector.example.com
              port: 443
            metadata:
              kind: Backend
              name: otel-collector
              namespace: envoy-gateway
            name: accesslog_otel_0_0/backend/-1
            protocol: GRPC
            tls:
              alpnProtocols: null
              caCertificate:
                name: system_ca_certificates
              sni: otel-collector.example.com
              useSystemTrustStore: true
        resourceAttributes:
        - key: k8s.cluster.name
          value: cluster-1
        text: |
          [%START_TIME%] "%REQ(:METHOD)% %PROTOCOL%" %RESPONSE_CODE%
    globalResources:
      proxyServiceCluster:
        metadata:
          kind: Service
          name: envoy-envoy-gateway-gateway-1-196ae069
          namespace: envoy-gateway-system
          sectionName: "8080"
        name: envoy-gateway/gateway-1
        settings:
        - addressType: IP
          endpoints:
          - host: 7.6.5.4
            port: 8080
            zone: zone1
          metadata:
            kind: Service
            name: envoy-envoy-gateway-gateway-1-196ae069
            namespace: envoy-gateway-system
            sectionName: "8080"
          name: envoy-gateway/gateway-1
          protocol: TCP
    http:
    - address: 0.0.0.0
      externalPort: 80
      hostnames:
      - '*'
      metadata:
        kind: Gateway
        name: gateway-1
        namespace: envoy-gateway
        sectionName: http
      name: envoy-gateway/gateway-1/http
      path:
        escapedSlashesAction: UnescapeAndRedirect
        mergeSlashes: true
      port: 10080
    metrics:
      enablePerEndpointStats: false
      enableRequestResponseSizesStats: false
      enableVirtualHostStats: false
    readyListener:
      address: 0.0.0.0
      ipFamily: IPv4
      path: /ready
      port: 19003
    tracing:
      authority: otel-collector.example.com
      destination:
        metadata:
          kind: EnvoyProxy
          name: telemetry-tls
          namespace: envoy-gateway-system
        name: tracing
        settings:
        - addressType: FQDN
          endpoints:
          - host: otel-collector.example.com
            port: 443
          metadata:
            kind: Backend
            name: otel-collector
            namespace: envoy-gateway
          name: tracing/backend/-1
          protocol: GRPC
          tls:
            alpnProtocols: null
            caCertificate:
              name: system_ca_certificates
            sni: otel-collector.example.com
            useSystemTrustStore: true
      provider:
        backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: otel-collector
          namespace: envoy-gateway
        type: OpenTelemetry
      samplingRate: 100
      serviceName: gateway-1.envoy-gateway
